# edek

./: .gitignore  Cargo.toml
src/: content.rs  editor.rs  line.rs  main.rs  terminal.rs
