[package]
name = "edek"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossterm = "0.23"
termion = "1.5.3"
unicode-segmentation = "1.10.0"
simple-logging = "2.0.2"
log = "0.4.17"
derivative = "2.2.0"